// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatherSelect.vue should not raise the label when its empty 1`] = `
<div
  class="feather-select-container"
>
  <div
    class="feather-menu feather-select-menu-container"
    data-ref-id="feather-select-menu-container"
  >
    
    <div
      aria-haspopup="true"
      class="feather-input-wrapper-container feather-select-wrapper"
      id="feather-menu-trigger"
    >
      <div
        class="feather-input-border"
      >
        <div
          class="pre-border"
        />
        <div
          class="label-border"
          style="width: 0px;"
        >
          <label
            class="feather-input-label"
            data-ref-id="feather-form-element-label"
            for="feather-select-input"
          >
            Users
          </label>
        </div>
        <div
          class="post-border"
        />
      </div>
      <div
        class="feather-input-wrapper"
      >
        <div
          class="prefix"
        >
          
          
        </div>
        
        <input
          aria-describedby="feather-select-description"
          aria-disabled="false"
          aria-haspopup="listbox"
          aria-invalid="false"
          class="feather-select-input"
          data-ref-id="feather-select-input"
          id="feather-select-input"
          readonly=""
        />
        
        <div
          class="post"
        >
          <!--v-if-->
          <!--v-if-->
          
          <svg
            aria-hidden="true"
            class="feather-select-icon feather-icon feather-select-icon"
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.7,9.29a1,1,0,0,0,0,1.41L12,16l5.3-5.3a1,1,0,0,0-1.41-1.41L12,13.17,8.11,9.29A1,1,0,0,0,6.7,9.29Z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    
    <!--v-if-->
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-select-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherSelect.vue should raise the label when it has a value 1`] = `
<div
  class="feather-select-container"
>
  <div
    class="feather-menu feather-select-menu-container"
    data-ref-id="feather-select-menu-container"
  >
    
    <div
      aria-haspopup="true"
      class="feather-input-wrapper-container raised feather-select-wrapper"
      id="feather-menu-trigger"
    >
      <div
        class="feather-input-border"
      >
        <div
          class="pre-border"
        />
        <div
          class="label-border"
          style="width: 0px;"
        >
          <label
            class="feather-input-label"
            data-ref-id="feather-form-element-label"
            for="feather-select-input"
          >
            Users
          </label>
        </div>
        <div
          class="post-border"
        />
      </div>
      <div
        class="feather-input-wrapper"
      >
        <div
          class="prefix"
        >
          
          
        </div>
        
        <input
          aria-describedby="feather-select-description"
          aria-disabled="false"
          aria-haspopup="listbox"
          aria-invalid="false"
          class="feather-select-input"
          data-ref-id="feather-select-input"
          id="feather-select-input"
          readonly=""
        />
        
        <div
          class="post"
        >
          <!--v-if-->
          <!--v-if-->
          
          <svg
            aria-hidden="true"
            class="feather-select-icon feather-icon feather-select-icon"
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.7,9.29a1,1,0,0,0,0,1.41L12,16l5.3-5.3a1,1,0,0,0-1.41-1.41L12,13.17,8.11,9.29A1,1,0,0,0,6.7,9.29Z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    
    <!--v-if-->
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-select-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherSelect.vue should render in disabled state 1`] = `
<div
  class="feather-select-container"
>
  <div
    class="feather-menu feather-select-menu-container"
    data-ref-id="feather-select-menu-container"
  >
    
    <div
      aria-haspopup="true"
      class="feather-input-wrapper-container disabled feather-select-wrapper"
      id="feather-menu-trigger"
    >
      <div
        class="feather-input-border"
      >
        <div
          class="pre-border"
        />
        <div
          class="label-border"
          style="width: 0px;"
        >
          <label
            class="feather-input-label"
            data-ref-id="feather-form-element-label"
            for="feather-select-input"
          >
            Users
          </label>
        </div>
        <div
          class="post-border"
        />
      </div>
      <div
        class="feather-input-wrapper"
      >
        <div
          class="prefix"
        >
          
          
        </div>
        
        <input
          aria-describedby="feather-select-description"
          aria-disabled="true"
          aria-haspopup="listbox"
          aria-invalid="false"
          class="feather-select-input"
          data-ref-id="feather-select-input"
          disabled=""
          id="feather-select-input"
          readonly=""
        />
        
        <div
          class="post"
        >
          <!--v-if-->
          <!--v-if-->
          
          <svg
            aria-hidden="true"
            class="feather-select-icon feather-icon feather-select-icon"
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.7,9.29a1,1,0,0,0,0,1.41L12,16l5.3-5.3a1,1,0,0,0-1.41-1.41L12,13.17,8.11,9.29A1,1,0,0,0,6.7,9.29Z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    
    <!--v-if-->
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-select-description"
  >
    <div
      class="feather-input-spacer"
    >
       
    </div>
    <!--v-if-->
    <!--v-if-->
    
    
  </div>
</div>
`;

exports[`FeatherSelect.vue should render in error state 1`] = `
<div
  class="feather-select-container"
>
  <div
    class="feather-menu feather-select-menu-container"
    data-ref-id="feather-select-menu-container"
  >
    
    <div
      aria-haspopup="true"
      class="feather-input-wrapper-container error feather-select-wrapper"
      id="feather-menu-trigger"
    >
      <div
        class="feather-input-border"
      >
        <div
          class="pre-border"
        />
        <div
          class="label-border"
          style="width: 0px;"
        >
          <label
            class="feather-input-label"
            data-ref-id="feather-form-element-label"
            for="feather-select-input"
          >
            Users
          </label>
        </div>
        <div
          class="post-border"
        />
      </div>
      <div
        class="feather-input-wrapper"
      >
        <div
          class="prefix"
        >
          
          
        </div>
        
        <input
          aria-describedby="feather-select-description"
          aria-disabled="false"
          aria-haspopup="listbox"
          aria-invalid="true"
          class="feather-select-input"
          data-ref-id="feather-select-input"
          id="feather-select-input"
          readonly=""
        />
        
        <div
          class="post"
        >
          <!--v-if-->
          <svg
            aria-hidden="true"
            class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
            data-ref-id="error-icon"
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
            />
            <rect
              height="7"
              rx="1"
              width="2"
              x="11"
              y="7"
            />
            <rect
              height="2"
              rx="0.65"
              width="2"
              x="11"
              y="15"
            />
          </svg>
          
          <svg
            aria-hidden="true"
            class="feather-select-icon feather-icon feather-select-icon"
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.7,9.29a1,1,0,0,0,0,1.41L12,16l5.3-5.3a1,1,0,0,0-1.41-1.41L12,13.17,8.11,9.29A1,1,0,0,0,6.7,9.29Z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    
    <!--v-if-->
  </div>
  <div
    class="feather-input-sub-text"
    id="feather-select-description"
  >
    <!--v-if-->
    <!--v-if-->
    <div
      aria-live="assertive"
      class="feather-input-error"
      data-ref-id="feather-form-element-error"
    >
      ERROR
    </div>
    
    
  </div>
</div>
`;
